testfx/errors/error_tests/err_12_func_param_error.fx
// 测试12: 函数定义错误 - 参数列表不完整
add := (a, ) {
    R> a + b
}
